# src/main/java/podcastService/category/dto/CategoryResponse.java
@@ -1,0 +1,10 @@
+package podcastService.category.dto;
+
+import java.util.UUID;
+
+public record CategoryResponse(
+        UUID id,
+        String name,
+        Integer position
+) {
+}
